# MMP

./: Georges Bib collection  RealtimePitch.cpp
Theremin/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~
Theremin/MMPGEORGE/: MMPGEORGE.pro
Theremin/cbits/: aubioutils.h  compile.sh  simpleVector.c  simpleVector.h  utils.c
Theremin/include/: ArmController.h  AudioBuffer.h  aubioutils.h  controller.h  getpitch.h  notemap.h  parse_args.h  utilities.h
Theremin/src/: ArmController.cpp  AudioBuffer.cpp  PortAudioRecPlay.cpp  RealtimePitch.cpp  aubiopitch.c  controller.cpp  getpitch.cpp  main.cpp  notemap.cpp  utils.c
